feat(coordinates, shipboard): added more functions for a better management of coordinates and their relationship with tiles in the shipboard